crates/pcbc/tests/snapshots/build__aggregated_warnings.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcbc build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ board.zen (3 components)
