crates/pcbc/tests/snapshots/build__inline_manifest_dependency.snap
---
source: crates/pcbc/tests/build.rs
expression: output
---
Command: pcbc build standalone.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ standalone.zen (1 components)
