crates/pcbc/tests/snapshots/build__inline_manifest_v2.snap
---
source: crates/pcbc/tests/build.rs
expression: output
---
Command: pcbc build standalone.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ standalone.zen (0 components)
