crates/pcbc/tests/snapshots/build__inline_no_cross_line_contamination.snap
---
source: crates/pcb/tests/build.rs
expression: output
---
Command: pcbc build test.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: Warning 2 should NOT be suppressed
   ╭─[ <TEMP_DIR>/test.zen:3:1 ]
 3 │warn("Warning 2 should NOT be suppressed")
   │                     ╰───────────────────── Warning 2 should NOT be suppressed

Warning: Warning 4 should NOT be suppressed
   ╭─[ <TEMP_DIR>/test.zen:5:1 ]
 5 │warn("Warning 4 should NOT be suppressed")
   │                     ╰───────────────────── Warning 4 should NOT be suppressed

Suppressed 2 warnings
✓ test.zen (0 components)
