crates/pcbc/tests/snapshots/build__inline_suppress_basic.snap
---
source: crates/pcbc/tests/build.rs
expression: output
---
Command: pcbc build test.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: This should not be suppressed
   ╭─[ <TEMP_DIR>/test.zen:3:1 ]
 3 │warn("This should not be suppressed", kind="test.match")
   │                            ╰──────────────────────────── This should not be suppressed

Suppressed 1 warning
✓ test.zen (0 components)
