crates/pcbc/tests/snapshots/build__inline_suppress_case_insensitive.snap
---
source: crates/pcbc/tests/build.rs
expression: output
---
Command: pcbc build test.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Suppressed 2 warnings
✓ test.zen (0 components)
